--- a/lib/CPANPLUS/I18N/CPANPLUS.pot
+++ b/lib/CPANPLUS/I18N/CPANPLUS.pot
@@ -104,8 +104,8 @@ msgid ""
 "\n"
 "### PLEASE NOTE ###################################################\n"
 "\n"
-"Although the core features of CPANPLUS does not require external\n"
-"modules, it may depend on other modules to work according to your\n"
+"Although the core features of CPANPLUS do not require external\n"
+"modules, they may depend on other modules to work according to your\n"
 "configuration.  If you skip the probing, or answer 'n' to questions\n"
 "that defaults to 'Y', there might be _unpredictable failures_!\n"
 "\n"
