--- a/lib/CPANPLUS/I18N/fr.po
+++ b/lib/CPANPLUS/I18N/fr.po
@@ -147,8 +147,8 @@ msgid ""
 "\n"
 "### PLEASE NOTE ###################################################\n"
 "\n"
-"Although the core features of CPANPLUS does not require external\n"
-"modules, it may depend on other modules to work according to your\n"
+"Although the core features of CPANPLUS do not require external\n"
+"modules, they may depend on other modules to work according to your\n"
 "configuration.  If you skip the probing, or answer 'n' to questions\n"
 "that defaults to 'Y', there might be _unpredictable failures_!\n"
 "\n"
@@ -157,8 +157,8 @@ msgstr ""
 "\n"
 "### ATTENTION ###################################################\n"
 "\n"
-"Meme si les fonctionnalités de base de CPANPLUS ne nécessite pas de\n"
-"modules externes, il peut dépendre d'autres modules pour fonctionner\n"
+"Meme si les fonctionnalités de base de CPANPLUS ne nécessitent pas de\n"
+"modules externes, ils peuvent dépendre d'autres modules pour fonctionner\n"
 "en fonction de votre configuration. Si vous sauter la détection, ou\n"
 "répondez 'n' aux questions qui sont par défault à 'Y', il peut y\n"
 "avoir des _erreurs imprévisibles_ !\n"
