--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,28 @@
 # $File: //depot/cpanplus/dist/ChangeLog $
-# $Revision: #9 $ $Change: 7704 $ $DateTime: 2003/08/25 18:06:00 $
+# $Revision: #10 $ $Change: 7931 $ $DateTime: 2003/09/07 12:54:32 $
+
+[Changes for 0.044 - September 7, 2003]
+
+Following the 'followup' tradition, this is yet another bugfix release,
+due to some minor test failures.
+
+* New Features
+
+ - We now bundle both maintainers's OpenPGP key in addition to PAUSE's
+   batch signing key, to make the signature test self-contained.
+
+* Bug fixes
+
+ - The default shell was incorrectly reporting "some modules failed
+   installation", if it also installed extra prerequisites.
+
+ - Failed autoinstall during setup could cause the signature test to
+   fail, due to an extra '.autoinstall.failed' file.
+
+ - English and French grammatical fixes from Walt Mankowski.
+
+ - If CPANPLUS failed to fetch CHECKSUM, it dies with "Can't use string
+   as hashref" instead of skipping to the next module.  Fixed.
 
 [Changes for 0.043 - August 31, 2003]
 
