--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 # $File: //depot/cpanplus/dist/ChangeLog $
-# $Revision: #14 $ $Change: 8896 $ $DateTime: 2003/11/16 09:27:30 $
+# $Revision: #15 $ $Change: 9267 $ $DateTime: 2003/12/11 20:30:22 $
+
+[Changes for 0.048 - December 17, 2003]
+
+* Bug fixes
+
+  - The make_test cache was totally bogus and broken, causing all
+    tests to not run.  Very, Very Sorry.
+
+  - IPC::Run is now made mandatory on platforms that can install
+    it, due to numerous bug reports concerning modern UN*X systems
+    that does not run interactive setups correctly without it.
 
 [Changes for 0.047 - November 16, 2003]
 
